--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ color:purple; font-weight:
         <h3>Você me ama ??</h3>
         <div class="buttons-container">
         <button>
-        <a href="foto_como_mor.html">Sim</a>
+        <a href="index.html2">Sim</a>
         </button>
         <button id="no">Não</button>
         </div>
@@ -47,3 +47,4 @@ color:purple; font-weight:
         })
     </script>
 </html>
+
